# cobs

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/nth/: cobs.h
